muokattu kuvan skaalautumista

--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,12 @@
     color: bisque;
   }
   
+  img{
+    max-width: 100%;
+    height: auto;
+  }
+
+
   @media (max-width: 600px) {
     nav, article {
       width: 100%;
